--- a/final_project/report.tex
+++ b/final_project/report.tex
@@ -22,7 +22,6 @@
 
 \tableofcontents
 \newpage
-\setcounter{section}{-1}
 
 
 %\section{Todos for IS}
@@ -49,7 +48,7 @@ In the following subsections, we first summarize the discussion on side-channel 
 Further in the section \ref{sec:experimentationanddesign}, we provide our modelling of the problem, experimental set-up as well as data analysis.
 Finally in the section \ref{sec:futurework}, we conclude our observation and discuss possible future work in this direction.
 
-section{Literature review}
+\section{Literature review}
 \label{cha:literaturereview}
 This section is written on the basis of \cite{phan2017synthesis}.
 
@@ -334,5 +333,5 @@ Thus, heuristics might play a bigger role in regards to synthesis of best side c
 
 
 \bibliographystyle{plain}
-\bibliography{references}
+\bibliography{literature}
 \end{document}
